--- a/js/app/i18n/locales/es.json
+++ b/js/app/i18n/locales/es.json
@@ -19,6 +19,8 @@
         "VEHICLES": "Vehículos",
         "TRAILERS": "Remolques",
         "SAVE_BUTTON": "Guardar",
+        "SAVE_ERROR": "Ocurrió un error al guardar",
+        "SAVE_SUCCESS": "Sus cambios han sido guardados",
         "FORM_REQUIRED": "Requerido",
         "UNDO": "Deshacer",
         "ADMIN_DASHBOARD_OPTIMIZATION_UNASSIGNED_TASKS": "{{ count }} elemento(s) fueron desasignados porque no cumplían con las restricciones.",
@@ -345,6 +347,18 @@
         "PRICING_PRICING_RULE_SET_STRATEGY_LABEL": "Método de cálculo",
         "PRICING_PRICING_RULE_SET_STRATEGY_MAP_LABEL": "Todas las reglas coincidentes",
         "PRICING_PRICING_RULE_SET_STRATEGY_UNKNOWN_LABEL": "Desconocido",
+        "FORM_PRICING_RULE_SET_STRATEGY_HELP": "Las reglas se evalúan de arriba hacia abajo, y las 'Reglas por punto' se evalúan antes que las 'Reglas por pedido'. Dependiendo del método de cálculo seleccionado, ya sea la primera regla que coincida decidirá el precio, o el precio se calculará sumando todas las reglas coincidentes.",
+        "FORM_PRICING_RULE_SET_NAME_LABEL": "Nombre",
+        "FORM_PRICING_RULE_SET_RULES_LABEL": "Reglas",
+        "FORM_PRICING_RULE_SET_NO_RULE_FOUND": "No se encontró ninguna regla de precios. Las reglas de precios definen cómo se calcula el costo de entrega.",
+        "FORM_PRICING_RULE_SET_PRICING_RULE_NAME_LABEL": "Nombre (mostrado al cliente)",
+        "FORM_PRICING_RULE_SET_PRICING_RULE_NAME_PLACEHOLDER": "ej. Entrega urgente",
+        "FORM_PRICING_RULE_SET_PRICING_RULE_NAME_HELP": "Si deja el nombre vacío, el nombre se generará automáticamente",
+        "FORM_PRICING_RULE_SAVE_ERROR": "Ocurrió un error al guardar la regla {{ name }}",
+        "FORM_PRICING_RULE_EXPRESSION_REQUIRED": "Agregue al menos una condición",
+        "FORM_PRICING_RULE_PRICE_REQUIRED": "Agregue un precio",
+        "FORM_PRICING_RULE_REORDER": "Arrastrar para reordenar",
+        "PRICING_ADD_RULE_LEGACY": "Añadir regla",
         "RULE_LEGACY_TARGET_DYNAMIC": "Entregas simples (una recogida, una entrega): aplicar una vez por pedido; Entregas multipunto: aplicar por cada punto (tarea de RECOGIDA y/o ENTREGA) si:",
         "RULE_LEGACY_TARGET_DYNAMIC_HELP": "Esta regla está obsoleta en favor de reglas separadas aplicadas ya sea una vez por pedido o por punto. Considere migrar al nuevo formato. (Ver la guía de migración arriba)",
         "RULE_LEGACY_TARGET_DYNAMIC_MIGRATE_RATIONALE": "Este esquema de precios contiene reglas obsoletas aplicadas de manera diferente para entregas simples (una recogida, una entrega) y entregas complejas multipunto, lo que las hace propensas a errores. Por lo tanto, se desaconseja el uso de tales reglas. Considere migrar al nuevo formato:",
@@ -363,6 +377,9 @@
         "RULE_PICKER_LINE_WEIGHT_TARGET_TASK": "Peso (kg) (usar solo con Tipo de tarea: Entrega)",
         "RULE_TARGET_DELIVERY": "Aplicar una vez por pedido si:",
         "RULE_TARGET_TASK": "Aplicar por cada punto (tarea de RECOGIDA y/o ENTREGA) si:",
+        "RULE_TARGET_DELIVERY_TITLE": "Reglas por pedido",
+        "RULE_TARGET_TASK_TITLE": "Reglas por punto",
+        "RULE_LEGACY_TARGET_DYNAMIC_TITLE": "Reglas heredadas",
         "ADMIN_DASHBOARD_SHOW_RECURRENCE_RULES": "Mostrar pedidos recurrentes",
         "ADMIN_DASHBOARD_CREATE_TASK": "Crear una tarea independiente (obsoleto)",
         "ADMIN_DASHBOARD_CREATE_RECURRENCE_RULE": "Crear una regla de recurrencia (obsoleto)",
