--- a/js/app/i18n/locales/fr.json
+++ b/js/app/i18n/locales/fr.json
@@ -24,6 +24,8 @@
         "VEHICLES": "Véhicules",
         "TRAILERS": "Remorques",
         "SAVE_BUTTON": "Sauvegarder",
+        "SAVE_ERROR": "Une erreur s'est produite lors de la sauvegarde",
+        "SAVE_SUCCESS": "Vos modifications ont été sauvegardées",
         "FORM_REQUIRED": "Requis",
         "UNDO": "Annuler",
         "FEATURE_PREVIEW": "Aperçu",
@@ -349,6 +351,18 @@
         "PRICING_PRICING_RULE_SET_STRATEGY_LABEL": "Méthode de calcul",
         "PRICING_PRICING_RULE_SET_STRATEGY_MAP_LABEL": "Toutes les règles correspondantes",
         "PRICING_PRICING_RULE_SET_STRATEGY_UNKNOWN_LABEL": "Inconnu",
+        "FORM_PRICING_RULE_SET_STRATEGY_HELP": "Les règles sont évaluées de haut en bas, et les 'Règles par point' sont évaluées avant les 'Règles par commande'. Selon la méthode de calcul sélectionnée, soit la première règle qui correspond décidera du prix, soit le prix sera calculé en additionnant toutes les règles correspondantes.",
+        "FORM_PRICING_RULE_SET_NAME_LABEL": "Nom",
+        "FORM_PRICING_RULE_SET_RULES_LABEL": "Règles",
+        "FORM_PRICING_RULE_SET_NO_RULE_FOUND": "Aucune règle de tarification trouvée. Les règles de tarification définissent comment le coût de livraison est calculé.",
+        "FORM_PRICING_RULE_SET_PRICING_RULE_NAME_LABEL": "Nom (affiché au client)",
+        "FORM_PRICING_RULE_SET_PRICING_RULE_NAME_PLACEHOLDER": "ex. Livraison urgente",
+        "FORM_PRICING_RULE_SET_PRICING_RULE_NAME_HELP": "Si vous laissez le nom vide, le nom sera généré automatiquement",
+        "FORM_PRICING_RULE_SAVE_ERROR": "Une erreur s'est produite lors de la sauvegarde de la règle {{ name }}",
+        "FORM_PRICING_RULE_EXPRESSION_REQUIRED": "Ajoutez au moins une condition",
+        "FORM_PRICING_RULE_PRICE_REQUIRED": "Ajoutez un prix",
+        "FORM_PRICING_RULE_REORDER": "Glisser pour réorganiser",
+        "PRICING_ADD_RULE_LEGACY": "Ajouter une règle",
         "RULE_LEGACY_TARGET_DYNAMIC": "Livraisons simples (un retrait, un dépôt) : appliquer une fois par commande ; Livraisons multi-points : appliquer pour chaque point (tâche de RETRAIT et/ou de DÉPÔT) si :",
         "RULE_LEGACY_TARGET_DYNAMIC_HELP": "Cette règle est obsolète en faveur de règles distinctes appliquées soit une fois par commande, soit par point. Veuillez envisager de migrer vers le nouveau format. (Voir le guide de migration ci-dessus)",
         "RULE_LEGACY_TARGET_DYNAMIC_MIGRATE_RATIONALE": "Ce schéma de tarification contient des règles obsolètes appliquées différemment pour les livraisons simples (un retrait, un dépôt) et les livraisons complexes à points multiples, ce qui les rend sujettes aux erreurs. Ainsi, l'utilisation de telles règles est déconseillée. Veuillez envisager de migrer vers le nouveau format :",
@@ -367,6 +381,9 @@
         "RULE_PICKER_LINE_WEIGHT_TARGET_TASK": "Poids (kg) (à utiliser uniquement avec Type de tâche : Dépôt)",
         "RULE_TARGET_DELIVERY": "Appliquer une fois par commande si :",
         "RULE_TARGET_TASK": "Appliquer pour chaque point (tâche de RETRAIT et/ou de DÉPÔT) si :",
+        "RULE_TARGET_DELIVERY_TITLE": "Règles par commande",
+        "RULE_TARGET_TASK_TITLE": "Règles par point",
+        "RULE_LEGACY_TARGET_DYNAMIC_TITLE": "Règles héritées",
         "CASH_ON_DELIVERY_DISCLAIMER": "Vous allez payer en contre-remboursement. Veuillez préparer le montant exact en espèces et assurez-vous d'être joignable.",
         "RRULE": {
             "every": "chaque",
