show point-based and order-based rules in two sections

--- a/js/app/i18n/locales/en.json
+++ b/js/app/i18n/locales/en.json
@@ -281,8 +281,10 @@
         "PRICING_ADD_RULE_PER_TASK": "Add rule per point",
         "PRICING_ADD_RULE_PER_TASK_HELP": "Add a rule to be applied per each point (PICKUP and/or DROPOFF task), recommended for complex, multi-point deliveries",
         "RULE_TARGET_DELIVERY_TITLE": "Rules per order",
+        "RULE_TARGET_DELIVERY_HELP": "Add rules to be applied once per order",
         "RULE_TARGET_DELIVERY": "Apply once per order if:",
         "RULE_TARGET_TASK_TITLE": "Rules per point",
+        "RULE_TARGET_TASK_HELP": "Add rules to be applied per each point (PICKUP and/or DROPOFF task)",
         "RULE_TARGET_TASK": "Apply per each point (PICKUP and/or DROPOFF task) if:",
         "RULE_LEGACY_TARGET_DYNAMIC_TITLE": "Legacy Rules",
         "RULE_LEGACY_TARGET_DYNAMIC": "Simple deliveries (one pickup, one dropoff): apply once per order; Multi-point deliveries: apply per each point (PICKUP and/or DROPOFF task) if:",
@@ -757,7 +759,7 @@
         "PRICING_RULE_SET_FORM_ERROR": "Error",
         "PRICING_RULE_SET_FORM_FAILED_TO_LOAD": "Failed to load pricing rule set",
         "PRICING_RULE_SET_MANUAL_SUPPLEMENTS": "Manual Supplements",
-        "PRICING_RULE_SET_MANUAL_SUPPLEMENTS_EMPTY": "No manual supplements configured. Manual supplements are fixed charges that can be applied to deliveries.",
+        "PRICING_RULE_SET_MANUAL_SUPPLEMENTS_HELP": "Configure manual supplements that could be added manually to each order",
         "PRICING_RULE_SET_ADD_MANUAL_SUPPLEMENT": "Add Manual Supplement",
         "PRICING_RULE_PICKER_VEHICLE_BIKE": "Bike",
         "PRICING_RULE_PICKER_VEHICLE_CARGO_BIKE": "Cargo Bike",
