update tax label

--- a/translations/messages.an.yml
+++ b/translations/messages.an.yml
@@ -291,7 +291,7 @@ order.total_excluding_tax: 'Total (sin IVA)'
 order.total_including_tax: 'Total (IVA incl.)'
 order.items_total: 'Total productos'
 order.total_tax: 'IVA'
-order.total_tax_by_rate: 'Total %name%'
+order.total_tax_by_rate: 'IVA %name%'
 order.preparation_expected_at: 'Preparación asperada a las %date%'
 order.preparation_expected_for: 'Preparación asperada a las %date%'
 order.shipping_date.title: 'Calendata d''entrega'
