--- a/translations/messages.eu.yml
+++ b/translations/messages.eu.yml
@@ -280,7 +280,7 @@ order.total_excluding_tax: 'Guztira (BEZik gabe)'
 order.total_including_tax: 'Guztira (BEZa barne)'
 order.items_total: 'Produktuak guztira'
 order.total_tax: 'BEZa'
-order.total_tax_by_rate: '%name% guztira'
+order.total_tax_by_rate: 'BEZa %name%'
 order.preparation_expected_at: 'Prestaketa %date%(e)tan hasiko da'
 order.shipping_date.title: 'Zure banatze-data'
 order.payer.title: 'Eroslearen informazioa'
