--- a/translations/messages.hu.yml
+++ b/translations/messages.hu.yml
@@ -177,7 +177,7 @@ order.total_excluding_tax: 'Összesen (az ár az ÁFÁ-t nem tartalmazza)'
 order.total_including_tax: 'Összesen (Az ár az ÁFÁ-t tartalmazza)'
 order.items_total: 'Termékek összesen'
 order.total_tax: 'ÁFA'
-order.total_tax_by_rate: 'Összesen %name%'
+order.total_tax_by_rate: 'ÁFA %name%'
 order.shipping_date.title: 'A kiszállítási dátumod'
 order.payer.title: 'Vásárlói információk'
 order.payer.identificationType: 'ID típus'
