--- a/translations/messages.en.yml
+++ b/translations/messages.en.yml
@@ -327,7 +327,7 @@ order.total_including_tax: Total (incl. VAT)
 order.items_total: Total products
 order.items_total_excluding_tax: Total products (excl. VAT)
 order.total_tax: VAT
-order.total_tax_by_rate: Total %name%
+order.total_tax_by_rate: VAT %name%
 order.preparation_expected_at: Preparation starting at %date%
 order.preparation_expected_for: Preparation expected for %date%
 order.shipping_date.title: Your shipping date
